[gd_scene load_steps=4 format=3 uid="uid://dk33y65xqrbfe"]

[ext_resource type="Script" uid="uid://clibx46r3pb4s" path="res://scripts/EnsureDeletion.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b26nan6i3i8po" path="res://scenes/Background.tscn" id="3"]
[ext_resource type="FontFile" path="res://fonts/GUI_60.tres" id="4"]

[node name="EnsureDeletion" type="Node2D"]
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("3")]

[node name="UI" type="Node2D" parent="."]

[node name="question" type="Label" parent="UI"]
offset_top = 61.0
offset_right = 576.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Are you sure
you want to
delete all 
scores?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="No" type="Button" parent="UI"]
offset_top = 830.0
offset_right = 580.0
offset_bottom = 930.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "No (cancel)"
flat = true

[node name="Yes" type="Button" parent="UI"]
offset_top = 460.0
offset_right = 580.0
offset_bottom = 560.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Yes (delete)"
flat = true

[connection signal="pressed" from="UI/No" to="." method="_change_back_to_scoreboard"]
[connection signal="pressed" from="UI/Yes" to="." method="_delete_score_file"]
